--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -26,7 +26,7 @@
         android:text="@string/username" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btnSearchEP"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/search" />
