--- a/app/src/main/res/layout/activity_profile_managment.xml
+++ b/app/src/main/res/layout/activity_profile_managment.xml
@@ -68,4 +68,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/update_profile" />
+
+    <Button
+        android:id="@+id/btnListviewPM"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/listview" />
 </LinearLayout>
